--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,51 @@
-.App {
-  text-align: center;
-}
+/* App.css */
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+@keyframes slideUp {
+  0% {
+    transform: translateY(100%); /* Initially position content off-screen (bottom) */
+    opacity: 0; /* Make it invisible */
+  }
+  100% {
+    transform: translateY(0); /* Move content to its normal position */
+    opacity: 1; /* Make content visible */
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.scroll-content {
+  opacity: 0;
+  transform: translateY(100%);
+  animation: slideUp 1s ease-out forwards;
+  transition: opacity 0.5s ease-out;
 }
 
-.App-link {
-  color: #61dafb;
+.scroll-content.visible {
+  opacity: 1;
+  transform: translateY(0);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+p {
+  opacity: 0;
+  transition: opacity 0.5s ease-out;
+}
+
+.scroll-content.visible p {
+  opacity: 1;
+}
+
+
+
+.divig {
+  width: 100px;
+  height: 100px;
+  background-color: red;
+  position: relative;
+  animation: myfirst 5s linear 2s infinite alternate;
+}
+
+@keyframes myfirst {
+  0%   {background-color:red; left:0px; top:0px;}
+  25%  {background-color:yellow; left:200px; top:0px;}
+  50%  {background-color:blue; left:200px; top:200px;}
+  75%  {background-color:green; left:0px; top:200px;}
+  100% {background-color:red; left:0px; top:0px;}
 }
